임시 커밋: 변경사항 저장

--- a/coding.html
+++ b/coding.html
@@ -72,7 +72,7 @@ function typing() {
     } else {
         // 모든 글자가 출력된 후 페이지 이동
         setTimeout(() => {
-            window.location.href = "(2)main.html"; // 원하는 페이지 경로로 수정
+            window.location.href = "welcometotbz.html"; // 원하는 페이지 경로로 수정
         }, 2000); // 모든 글자가 출력된 후 2초 후에 이동
     }
 }
