--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ img {
     .overlay-text1 {
         position: absolute;
         top: 10%; /* 이미지 상단으로부터 상대적 위치 */
-        left: 12%; /* 이미지 왼쪽으로부터 상대적 위치 */
+        left: 18%; /* 이미지 왼쪽으로부터 상대적 위치 */
         transform: translate(-50%, -50%);
         color: white;
         font-family: 'Pretendard-Regular';
@@ -224,7 +224,7 @@ img {
     .overlay-text3 {
         position: absolute;
         top: 10%; /* 이미지 상단으로부터 상대적 위치 */
-        left: 18%; /* 이미지 왼쪽으로부터 상대적 위치 */
+        left: 12%; /* 이미지 왼쪽으로부터 상대적 위치 */
         transform: translate(-50%, -50%);
         color: white;
         font-family: 'Pretendard-Regular';
@@ -267,19 +267,19 @@ img {
     </div>
     <div class="sthumbnail-container">
         <div class="sthumbnail-1">
-            <img src="a.gif">
-            <div class="overlay-text1">✦ 19 <br>&nbsp;&nbsp;&nbsp;&nbsp;project</div>
-            <button class="hover-button" onclick="location.href='project1.html'">૮ ・ﻌ・ა view project</button>
+            <img src="c.gif">
+            <div class="overlay-text1">✦ theboyz <br>&nbsp;&nbsp;&nbsp;&nbsp;access password</div>
+            <button class="hover-button" onclick="location.href='pwtheboyz.html'">૮ ・ﻌ・ა view project</button>
         </div>
         <div class="sthumbnail-1">
             <img src="b.png">
             <div class="overlay-text2">✦ recruitment<br>&nbsp;&nbsp;&nbsp;&nbsp;marketing&design</div>
-            <button class="hover-button" onclick="location.href='project2.html'">૮ ・ﻌ・ა view project</button>
+            <button class="hover-button" onclick="location.href='fpproject.html'">૮ ・ﻌ・ა view project</button>
         </div>
         <div class="sthumbnail-1">
-            <img src="c.gif">
-            <div class="overlay-text3">✦ TBZ<br>&nbsp;&nbsp;&nbsp;&nbsp;album redesign</div>
-            <button class="hover-button" onclick="location.href='index4.html'">૮ ・ﻌ・ა view project</button>
+            <img src="a.gif">
+            <div class="overlay-text3">✦ 19<br>&nbsp;&nbsp;&nbsp;&nbsp;project</div>
+            <button class="hover-button" onclick="location.href='19project.html'">૮ ・ﻌ・ა view project</button>
         </div>
         <div class="sthumbnail-1">
             <img src="d.png">
